--- a/src/components/common/AsyncSelect/styles.module.css
+++ b/src/components/common/AsyncSelect/styles.module.css
@@ -60,28 +60,6 @@
     z-index: 1000;
 }
 
-.menu::-webkit-scrollbar,
-.options::-webkit-scrollbar {
-    width: 8px;
-}
-
-.menu::-webkit-scrollbar-track,
-.options::-webkit-scrollbar-track {
-    background: var(--background-color);
-    border-radius: 4px;
-}
-
-.menu::-webkit-scrollbar-thumb,
-.options::-webkit-scrollbar-thumb {
-    background: var(--quaternary-color);
-    border-radius: 4px;
-}
-
-.menu::-webkit-scrollbar-thumb:hover,
-.options::-webkit-scrollbar-thumb:hover {
-    background: var(--secondary-color);
-}
-
 .search {
     background-color: var(--background-color);
     border: none;
