--- a/src/pages/admin/components/TravelJourney/styles.module.css
+++ b/src/pages/admin/components/TravelJourney/styles.module.css
@@ -324,25 +324,6 @@
     padding: 8px;
 }
 
-/* Add these new styles for custom scrollbar */
-.multiSelect::-webkit-scrollbar {
-    width: 8px;
-}
-
-.multiSelect::-webkit-scrollbar-track {
-    background: var(--background-color);
-    border-radius: 4px;
-}
-
-.multiSelect::-webkit-scrollbar-thumb {
-    background: var(--quaternary-color);
-    border-radius: 4px;
-}
-
-.multiSelect::-webkit-scrollbar-thumb:hover {
-    background: var(--secondary-color);
-}
-
 .multiSelect option {
     border-radius: 4px;
     margin: 2px 0;
